data/derived/fa15/progs/unify/prog2674.ml.out
Characters 77-79:
  | Sine e' -> sin (3.142 *. e')
                             ^^
Error: This expression has type expr but an expression was expected of type
         float
